--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,9 @@ rust-version = "1.71"
 
 [dependencies]
 rs-protov2d = { git = "https://github.com/BadAimWeeb/rs-protov2d" }
+futures-util = "0.3.31"
+rmp-serde = "1.3.0"
+serde = "1.0.215"
+tokio = { version = "1.41.1", features = ["sync"] }
+rmpv = "1.3.0"
+rustls = { version = "0.23.19", optional = true }
