--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ futures-util = "0.3.31"
 rmp-serde = "1.3.0"
 serde = { version = "1.0.215", features = ["serde_derive"] }
 tokio = { version = "1.41.1", features = ["sync"] }
+tokio-stream = { version = "0.1.17", features = ["sync"] }
 rmpv = "1.3.0"
 rustls = "0.23.19"
 async-mutex = "1.4.0"
