--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ tokio-stream = { version = "0.1.17", features = ["sync"] }
 rmpv = "1.3.0"
 rustls = "0.23.19"
 async-mutex = "1.4.0"
+futures = "0.3.31"
